--- a/src/assets/media/header.css
+++ b/src/assets/media/header.css
@@ -8,6 +8,7 @@
     --fuente-2: 'Open Sans', sans-serif;
     --weight-font-regular: 400;
     --weight-font-bold: 700;
+    
 }
 
 body {
@@ -19,8 +20,8 @@ body {
     color: #212529;
     text-align: left;
     background-color: rgb(255, 255, 255);
+    
 }
-
 
 .box-date-name h1{
     font-family: var(--fuente-1);
@@ -42,6 +43,72 @@ span.fecha {
     font-size: 25px;
 }
 
-.mariposa1{
-    rotate: 8px;;
+
+/* Mariposas */
+.box-mariposa{
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    height: 500px
+}
+
+
+.mariposa{
+    height: 8.5em;
+    width:8.5em;
+}
+
+.m1{
+    position:absolute;
+    width: min-content;
+    left: 110px;
+    top: -10px;
+    transform: rotate(20deg); 
+}
+.m2{
+    position:absolute;
+    width: min-content;
+    left: 40px;
+    top: 30px;
+    transform: rotate(320deg); 
+}
+.m3{
+    position:absolute;
+    width: min-content;
+    left: -50px;
+    top: 90px;
+    transform: rotate(30deg);
+}
+.m4{
+    position:absolute;
+    width: min-content;
+    top: 40px;
+    right: 40px;
+    transform: rotate(20deg);
+}
+.m5{
+    position:absolute;
+    width: min-content;
+    right: -20px;
+    top: 90px;
+    transform: rotate(320deg);
+}
+
+.m6{
+    position:absolute;
+    width: min-content;
+    top: -20px;
+    right: 95px;
+    transform: rotate(330deg);
+}
+
+.box-header{
+    margin-top: -25em;
+}
+
+
+/* Mariposas */
+
+.box-counter{
+    margin-top: 5em;
 }
