--- a/src/assets/media/header.css
+++ b/src/assets/media/header.css
@@ -21,6 +21,7 @@ body {
     text-align: left;
     background-color: rgb(255, 255, 255);
     background-image: url("../static/background.jpg");
+    background-attachment: fixed;
 
 }
 
@@ -49,7 +50,7 @@ span.fecha {
 .frase h3{
     margin: 4em 0 2.5em;
     font-family: var(--fuente-2);
-    font-size: 1.5em;
+    font-size: 1.2em;
 }
 .frase{
     padding: 0 2em;
@@ -82,49 +83,53 @@ span.fecha {
 
 
 .mariposa{
+    position:absolute;
+    width: min-content;
     height: 8.5em;
     width:8.5em;
+    animation-name: mariposaAnimation;
+    animation-duration: 3s;
+}
+
+@keyframes mariposaAnimation {
+    from{
+        opacity: 0;
+        height: 12em;
+        width:12em;
+    }
+
+    to{
+        opacity: 1;
+    }
 }
 
 .m1{
-    position:absolute;
-    width: min-content;
     left: 110px;
     top: -10px;
     transform: rotate(20deg); 
 }
 .m2{
-    position:absolute;
-    width: min-content;
     left: 40px;
     top: 30px;
     transform: rotate(320deg); 
 }
 .m3{
-    position:absolute;
-    width: min-content;
     left: -50px;
     top: 90px;
     transform: rotate(30deg);
 }
 .m4{
-    position:absolute;
-    width: min-content;
     top: 40px;
     right: 40px;
     transform: rotate(20deg);
 }
 .m5{
-    position:absolute;
-    width: min-content;
     right: -20px;
     top: 90px;
     transform: rotate(320deg);
 }
 
 .m6{
-    position:absolute;
-    width: min-content;
     top: -20px;
     right: 95px;
     transform: rotate(330deg);
@@ -139,28 +144,78 @@ span.fecha {
 
 .box-counter{
     margin-top: 5em;
+    padding-top: 3em;
 }
 
 .counter-container{
     border-radius: 50%;
     border: 3px solid rgb(137, 0, 137);
-    padding: 1em 0 1.5em;
-    width: 35em;
-    height: 35em;
+    width: 30em;
+    height: 30em;
     background-color: var(--color-5);
+    margin: 0 auto;
 }
+
+.rows-casillas{
+    align-items: center;
+    justify-content: center;
+    margin-top: 5.5em;
+}
+
 
 .counter-casilla{
     border-radius: 5px;
     border: 1.5px solid rgb(137, 0, 137);
-
+    padding: 1em 0;
 }
 
+.counter-casilla h6{
+    font-size: 0.75em;
+}
+
+.counter-casilla h5{
+    font-size: 1.6em;
+}
+
+/* Animation flowers */
+
+.flowers{
+    position:absolute;
+    height: 100%;
+    width: 100%;
+    align-content: center;
+    top: 635px;
+    overflow: hidden;
+}
+
+.flowers img{
+    position: absolute;
+    z-index: -10;
+    width: 55em;
+    height: 100%;
+    left: 50%;
+    margin-left: -27.5em;
+    right: 50%;
+    margin-right: -27.5em;
+
+    animation-name: flowerAnimation;
+    animation-duration: 3s;
+}
+
+@keyframes flowerAnimation {
+    from{
+        opacity: 0;
+    }
+
+    to{
+        opacity: 1;
+    }
+}
 
 /* Map */
 
 .box-map{
-    margin-top: 5em;
+    margin-top: 10em;
     text-align: center;
     font-family: var(--fuente-2);
 }
