--- a/src/assets/media/header.css
+++ b/src/assets/media/header.css
@@ -19,9 +19,7 @@ body {
     line-height: 1.5;
     color: #212529;
     text-align: left;
-    background-color: rgb(255, 255, 255);
-    background-image: url("../static/background.jpg");
-    background-attachment: fixed;
+
 
 }
 
@@ -453,3 +451,15 @@ li{
         bottom: 9em;
     }
 }
+
+
+.box-bg {    
+    background: url("../static/background.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    z-index: -100;
+  }
